feat(about): about section

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
   </head>
   <body>
 
-    <div class="loader__container">
+    <!-- <div class="loader__container">
       <div class="loader">
         <span></span>
         <span></span>
         <span></span>
         <span></span>
       </div>
-    </div>
+    </div> -->
 
     <section class="navigation">
       <div class="nav-container">
@@ -83,6 +83,55 @@
           </div>
         </div>
       </div>
+    </section>
+
+    <section class="about">
+      <div class="about__title">About me</div>
+      <div class="about__left">
+          <img src="./img/me.jpg" alt="Michał Raźny">
+          <div class="about__left--box">
+            <p>Michał</p>
+            <span>FRONT-END DEVELOPER</span>
+          </div>
+          <div class="clear"></div>
+          <div class="about__left--desc">
+            My name is Michał. I am interested in front end development. I like to be up-to-date, that's why I check the news introduced into the web development world every day. I know from experience that the front-end is not as easy as it might seem and that is why while working with each project, I try to meet the expectations and create the highest quality software. Apart from job, my hobbies are cycling, exercising and DIY in the house.
+          </div>
+          <div class="about__left--skills">
+            <ul>
+              <li>Angular</li>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>JavaScript</li>
+              <li>TypeScript</li>
+              <li>Node.js</li>
+              <li>MongoDB</li>
+            </ul>
+          </div>
+          <div class="clear"></div>
+      </div>
+      <div class="about__right">
+        <div class="about__right--title">
+          Experience
+        </div>
+        <div class="about__right--job">
+          <p>Krakweb</p>
+          <span>The first job in the industry. It was a summer internship, during which I gained an invaluable basis of knowledge in the field of front-end development.</span>
+        </div>
+        <div class="about__right--job">
+          <p>Mt-web</p>
+          <span>Another summer internship. Here I learned some advanced Wordpress techniques. My responsibilities included maintaining and creating new Wordpress templates.</span>
+        </div>
+        <div class="about__right--job">
+          <p>Comarch</p>
+          <span>Current job. The scope of duties fully corresponds to my interests, which is why I enjoy this job. I create software mainly in Angular, additionally using my knowledge of CSS, HTML, clean code writing techniques and testing frameworks.</span>
+        </div>
+        <div class="about__right--job">
+          <p>Freelancer</p>
+          <span>I deal with the creation of systems and websites in accordance with the client's requirements. Additional, I was creating games and programs in languages: C++, Python, Java or Kotlin.</span>
+        </div>
+      </div>
+      <div class="clear"></div>
     </section>
   </body>
 </html>
