fix(styles): add modal for each portfolio item, fix styles for rwd

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </div>
     </div>
 
-    <section class="navigation" id="home">
+    <section class="navigation">
       <div class="nav-container">
         <div class="brand">
           <a href="#home">Michał Raźny</a>
@@ -68,7 +68,7 @@
           <div class="header__text">
             <h1>
               Programowanie Aplikacji Internetowych <br>
-              <span>Michał Raźny</span>
+              <span>Michał Raźny 41K9</span>
             </h1>
           </div>
         </div>
@@ -168,36 +168,38 @@
         <div class="section__title">Pricing</div>
         <div class="pricing__box">
           <div class="pricing">
-            <div class="pricing__title">Limited</div>
-            <div class="pricing__cost">€2</div>
-            <div class="pricing__trial">Available for a month</div>
+            <div class="pricing__title">Personal Website</div>
+            <div class="pricing__cost">from €200</div>
+            <div class="pricing__trial">Get now!</div>
             <hr>
             <ul>
-              <li><strong>8</strong>team members</li>
-              <li><strong>6</strong>team playlists</li>
-              <li><strong>Unlimited</strong> public playlists</li>
+              <li><strong>1</strong> Single Page Application</li>
+              <li><strong>6</strong> changes</li>
+              <li><strong>Unlimited</strong> bugfixing</li>
             </ul>
           </div>
           <div class="pricing pricing--bordered">
-            <div class="pricing__title">Exclusive</div>
-            <div class="pricing__cost">€2</div>
-            <div class="pricing__trial">Available for a month</div>
+            <div class="pricing__title">Mobile App</div>
+            <div class="pricing__cost">from €250</div>
+            <div class="pricing__trial">Get now!</div>
             <hr>
             <ul>
-              <li><strong>8</strong>team members</li>
-              <li><strong>6</strong>team playlists</li>
-              <li><strong>Unlimited</strong> public playlists</li>
+              <li><strong>1</strong> mobile app</li>
+              <li><strong>Unlimited</strong> bugfixing</li>
+              <li><strong>4</strong> templates</li>
+              <li><strong>1 year</strong> of support</li>
+              <li><strong>4</strong> different possible technologies</li>
             </ul>
           </div>
           <div class="pricing">
-            <div class="pricing__title">Gold</div>
-            <div class="pricing__cost">€2</div>
-            <div class="pricing__trial">Available for a month</div>
+            <div class="pricing__title">Whole website</div>
+            <div class="pricing__cost">from €300</div>
+            <div class="pricing__trial">Get now!</div>
             <hr>
             <ul>
-              <li><strong>8</strong>team members</li>
-              <li><strong>6</strong>team playlists</li>
-              <li><strong>Unlimited</strong> public playlists</li>
+              <li><strong>2</strong> personalized designs</li>
+              <li><strong>1 year</strong> of support</li>
+              <li><strong>Unlimited</strong> bugfixing</li>
             </ul>
           </div>
           <div class="clear"></div>
@@ -251,12 +253,76 @@
     </div>
 
     <!-- PORTFOLIO MODALS -->
-    <!-- The Modal -->
     <div id="portfolioModal1" class="modal">
       <div class="modal__content">
         <div class="modal__header">
-          <span class="modal__close" onclick="closePortfolioModal('portfolioModal1')">&times;</span>
           <h2>Portfolio Item 1</h2>
+          <span class="modal__close" onclick="closePortfolioModal('portfolioModal1')">&times;</span>
+        </div>
+        <div class="modal__body">
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi quam sapiente saepe possimus praesentium iure illo excepturi consequatur, voluptates accusantium?</p>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam doloribus magni commodi repellendus harum perspiciatis nisi amet cum! Ipsum, in ab est vitae amet aut neque dolorum minus at consectetur? Ipsam qui, impedit, ab sequi facere rem est debitis exercitationem non sapiente magni delectus eos quasi odio perspiciatis alias. Optio!</p>
+          <img src="https://picsum.photos/320/250" alt="">
+        </div>
+      </div>
+    </div>
+    <div id="portfolioModal2" class="modal">
+      <div class="modal__content">
+        <div class="modal__header">
+          <h2>Portfolio Item 2</h2>
+          <span class="modal__close" onclick="closePortfolioModal('portfolioModal2')">&times;</span>
+        </div>
+        <div class="modal__body">
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi quam sapiente saepe possimus praesentium iure illo excepturi consequatur, voluptates accusantium?</p>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam doloribus magni commodi repellendus harum perspiciatis nisi amet cum! Ipsum, in ab est vitae amet aut neque dolorum minus at consectetur? Ipsam qui, impedit, ab sequi facere rem est debitis exercitationem non sapiente magni delectus eos quasi odio perspiciatis alias. Optio!</p>
+          <img src="https://picsum.photos/320/250" alt="">
+        </div>
+      </div>
+    </div>
+    <div id="portfolioModal3" class="modal">
+      <div class="modal__content">
+        <div class="modal__header">
+          <h2>Portfolio Item 3</h2>
+          <span class="modal__close" onclick="closePortfolioModal('portfolioModal3')">&times;</span>
+        </div>
+        <div class="modal__body">
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi quam sapiente saepe possimus praesentium iure illo excepturi consequatur, voluptates accusantium?</p>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam doloribus magni commodi repellendus harum perspiciatis nisi amet cum! Ipsum, in ab est vitae amet aut neque dolorum minus at consectetur? Ipsam qui, impedit, ab sequi facere rem est debitis exercitationem non sapiente magni delectus eos quasi odio perspiciatis alias. Optio!</p>
+          <img src="https://picsum.photos/320/250" alt="">
+        </div>
+      </div>
+    </div>
+    <div id="portfolioModal4" class="modal">
+      <div class="modal__content">
+        <div class="modal__header">
+          <h2>Portfolio Item 4</h2>
+          <span class="modal__close" onclick="closePortfolioModal('portfolioModal4')">&times;</span>
+        </div>
+        <div class="modal__body">
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi quam sapiente saepe possimus praesentium iure illo excepturi consequatur, voluptates accusantium?</p>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam doloribus magni commodi repellendus harum perspiciatis nisi amet cum! Ipsum, in ab est vitae amet aut neque dolorum minus at consectetur? Ipsam qui, impedit, ab sequi facere rem est debitis exercitationem non sapiente magni delectus eos quasi odio perspiciatis alias. Optio!</p>
+          <img src="https://picsum.photos/320/250" alt="">
+        </div>
+      </div>
+    </div>
+    <div id="portfolioModal5" class="modal">
+      <div class="modal__content">
+        <div class="modal__header">
+          <h2>Portfolio Item 5</h2>
+          <span class="modal__close" onclick="closePortfolioModal('portfolioModal5')">&times;</span>
+        </div>
+        <div class="modal__body">
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi quam sapiente saepe possimus praesentium iure illo excepturi consequatur, voluptates accusantium?</p>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam doloribus magni commodi repellendus harum perspiciatis nisi amet cum! Ipsum, in ab est vitae amet aut neque dolorum minus at consectetur? Ipsam qui, impedit, ab sequi facere rem est debitis exercitationem non sapiente magni delectus eos quasi odio perspiciatis alias. Optio!</p>
+          <img src="https://picsum.photos/320/250" alt="">
+        </div>
+      </div>
+    </div>
+    <div id="portfolioModal6" class="modal">
+      <div class="modal__content">
+        <div class="modal__header">
+          <h2>Portfolio Item 6</h2>
+          <span class="modal__close" onclick="closePortfolioModal('portfolioModal6')">&times;</span>
         </div>
         <div class="modal__body">
           <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi quam sapiente saepe possimus praesentium iure illo excepturi consequatur, voluptates accusantium?</p>
