--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <TITLE>Michał Raźny - Programowanie Aplikacji Internetowych</TITLE>
     <meta name="author" content="Michał Raźny">
     <meta name="description" content="Strona Internetowa napisana z użyciem HTML, CSS oraz JS na potrzeby przedmiotu Programowanie Aplikacji Internetowych">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
     <script type="text/javascript" src="./js/jquery.js"></script>
     <script type="text/javascript" src="./js/script.js"></script>
@@ -249,6 +250,48 @@
           </div>
           <div class="clear"></div>
         </div>
+      </section>
+    </div>
+
+    <div class="contact-wrapper">
+      <section class="section" id="contact">
+        <div class="section__title">Contact</div>
+        <form action="" class="contact__form">
+          <div class="contact__50">
+            <div class="contact__input">
+              <label>First Name</label>
+              <input type="text" class="contact__formcontrol">
+            </div>
+          </div>
+          <div class="contact__50">
+            <div class="contact__input">
+              <label>Last Name</label>
+              <input type="text" class="contact__formcontrol">
+            </div>
+          </div>
+          <div class="clear"></div>
+          <div class="contact__100">
+            <div class="contact__input">
+              <label>Email</label>
+              <input type="text" class="contact__formcontrol">
+            </div>
+          </div>
+          <div class="contact__100">
+            <div class="contact__input">
+              <label>Message Subject</label>
+              <input type="text" class="contact__formcontrol">
+            </div>
+          </div>
+          <div class="contact__100">
+            <div class="contact__input textarea">
+              <label>Drop your message here</label>
+              <textarea rows="3" type="text" class="contact__formcontrol"></textarea>
+            </div>
+          </div>
+          <div class="contact__100">
+            <button class="contact__submit">SEND</button>
+          </div>
+        </form>
       </section>
     </div>
 
