feat(footer,styles): styles fixes, footer added

--- a/index.html
+++ b/index.html
@@ -295,6 +295,32 @@
       </section>
     </div>
 
+    <div class="footer-wrapper">
+      <footer class="footer">
+        <div class="footer__column">
+          <div class="footer__column--title">
+            ABOUT
+          </div>
+          <div class="footer__column--text">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non, voluptatibus temporibus accusamus illo adipisci accusantium, assumenda libero, beatae eos recusandae laudantium molestias deleniti. Corporis culpa illum repellat fugiat maxime aliquid quos dolore. Inventore voluptates iusto eos corporis quas cupiditate? Sit.
+          </div>
+        </div>
+        <div class="footer__column">
+          <div class="footer__column--title">
+            QUICK LINKS
+          </div>
+          <div class="footer__column--text">
+            <a href="">Sitemap</a>
+            <a href="">About me</a>
+            <a href="">Contact</a>
+            <a href="">Privacy Policy</a>
+            <a href="">FAQ</a>
+          </div>
+        </div>
+        <div class="clear"></div> 
+      </footer>
+    </div>
+
     <!-- PORTFOLIO MODALS -->
     <div id="portfolioModal1" class="modal">
       <div class="modal__content">
