--- a/index.html
+++ b/index.html
@@ -219,37 +219,37 @@
             <div onclick="portfolioFilter('angular')">Angular</div>
           </div>
           <div data-cat="css" class="portfolio__image" onclick="openPortfolioModal(1)">
-            <img src="https://picsum.photos/320/250" alt="">
+            <img src="./img/portfolio1.jpg" alt="">
             <div class="portfolio__image--overlay">
               <div class="portfolio__image--btn">Details</div>
             </div>
           </div>
           <div data-cat="css" class="portfolio__image" onclick="openPortfolioModal(2)">
-            <img src="https://picsum.photos/320/250" alt="">
+            <img src="./img/portfolio2.jpg" alt="">
             <div class="portfolio__image--overlay">
               <div class="portfolio__image--btn">Details</div>
             </div>
           </div>
           <div data-cat="angular" class="portfolio__image" onclick="openPortfolioModal(3)">
-            <img src="https://picsum.photos/320/250" alt="">
+            <img src="./img/portfolio3.jpg" alt="">
             <div class="portfolio__image--overlay">
               <div class="portfolio__image--btn">Details</div>
             </div>
           </div>
           <div data-cat="html" class="portfolio__image" onclick="openPortfolioModal(4)">
-            <img src="https://picsum.photos/320/250" alt="">
+            <img src="./img/portfolio4.jpg" alt="">
             <div class="portfolio__image--overlay">
               <div class="portfolio__image--btn">Details</div>
             </div>
           </div>
           <div data-cat="html" class="portfolio__image" onclick="openPortfolioModal(5)">
-            <img src="https://picsum.photos/320/250" alt="">
+            <img src="./img/portfolio5.jpg" alt="">
             <div class="portfolio__image--overlay">
               <div class="portfolio__image--btn">Details</div>
             </div>
           </div>
           <div data-cat="html" class="portfolio__image" onclick="openPortfolioModal(6)">
-            <img src="https://picsum.photos/320/250" alt="">
+            <img src="./img/portfolio6.jpg" alt="">
             <div class="portfolio__image--overlay">
               <div class="portfolio__image--btn">Details</div>
             </div>
@@ -337,7 +337,7 @@
         <div class="modal__body">
           <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi quam sapiente saepe possimus praesentium iure illo excepturi consequatur, voluptates accusantium?</p>
           <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam doloribus magni commodi repellendus harum perspiciatis nisi amet cum! Ipsum, in ab est vitae amet aut neque dolorum minus at consectetur? Ipsam qui, impedit, ab sequi facere rem est debitis exercitationem non sapiente magni delectus eos quasi odio perspiciatis alias. Optio!</p>
-          <img src="https://picsum.photos/320/250" alt="">
+          <img src="./img/portfolio1.jpg" alt="">
         </div>
       </div>
     </div>
@@ -350,7 +350,7 @@
         <div class="modal__body">
           <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi quam sapiente saepe possimus praesentium iure illo excepturi consequatur, voluptates accusantium?</p>
           <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam doloribus magni commodi repellendus harum perspiciatis nisi amet cum! Ipsum, in ab est vitae amet aut neque dolorum minus at consectetur? Ipsam qui, impedit, ab sequi facere rem est debitis exercitationem non sapiente magni delectus eos quasi odio perspiciatis alias. Optio!</p>
-          <img src="https://picsum.photos/320/250" alt="">
+          <img src="./img/portfolio2.jpg" alt="">
         </div>
       </div>
     </div>
@@ -363,7 +363,7 @@
         <div class="modal__body">
           <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi quam sapiente saepe possimus praesentium iure illo excepturi consequatur, voluptates accusantium?</p>
           <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam doloribus magni commodi repellendus harum perspiciatis nisi amet cum! Ipsum, in ab est vitae amet aut neque dolorum minus at consectetur? Ipsam qui, impedit, ab sequi facere rem est debitis exercitationem non sapiente magni delectus eos quasi odio perspiciatis alias. Optio!</p>
-          <img src="https://picsum.photos/320/250" alt="">
+          <img src="./img/portfolio3.jpg" alt="">
         </div>
       </div>
     </div>
@@ -376,7 +376,7 @@
         <div class="modal__body">
           <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi quam sapiente saepe possimus praesentium iure illo excepturi consequatur, voluptates accusantium?</p>
           <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam doloribus magni commodi repellendus harum perspiciatis nisi amet cum! Ipsum, in ab est vitae amet aut neque dolorum minus at consectetur? Ipsam qui, impedit, ab sequi facere rem est debitis exercitationem non sapiente magni delectus eos quasi odio perspiciatis alias. Optio!</p>
-          <img src="https://picsum.photos/320/250" alt="">
+          <img src="./img/portfolio4.jpg" alt="">
         </div>
       </div>
     </div>
@@ -389,7 +389,7 @@
         <div class="modal__body">
           <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi quam sapiente saepe possimus praesentium iure illo excepturi consequatur, voluptates accusantium?</p>
           <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam doloribus magni commodi repellendus harum perspiciatis nisi amet cum! Ipsum, in ab est vitae amet aut neque dolorum minus at consectetur? Ipsam qui, impedit, ab sequi facere rem est debitis exercitationem non sapiente magni delectus eos quasi odio perspiciatis alias. Optio!</p>
-          <img src="https://picsum.photos/320/250" alt="">
+          <img src="./img/portfolio5.jpg" alt="">
         </div>
       </div>
     </div>
@@ -402,7 +402,7 @@
         <div class="modal__body">
           <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi quam sapiente saepe possimus praesentium iure illo excepturi consequatur, voluptates accusantium?</p>
           <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam doloribus magni commodi repellendus harum perspiciatis nisi amet cum! Ipsum, in ab est vitae amet aut neque dolorum minus at consectetur? Ipsam qui, impedit, ab sequi facere rem est debitis exercitationem non sapiente magni delectus eos quasi odio perspiciatis alias. Optio!</p>
-          <img src="https://picsum.photos/320/250" alt="">
+          <img src="./img/portfolio6.jpg" alt="">
         </div>
       </div>
     </div>
